--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             width: 18px;
             height: 18px;
             margin-left: auto;
-            background-image: url(./images/ico-move-up.png);
+            background-image: url(images/ico-move-up.png);
             background-size: 100%;
             transform: rotate(90deg);
             vertical-align: middle;
@@ -312,7 +312,7 @@
             height: 27px;
         }
         #service-section03 .content-list .ico-service{
-            background-image: url(./images/ico-service07.png);
+            background-image: url(images/ico-service07.png);
             margin-top: 10px;
         }
 
