--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             width:100%;
             position: relative;
             height: 600px;
-            background: url(./visual/main_visual03.png) no-repeat center center;
+            background: url(visual/main_visual03.png) no-repeat center center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
