--- a/index.html
+++ b/index.html
@@ -422,6 +422,20 @@
                         <li>
                             <div class="data-title">
                                 <i class="iconset ico-service"></i>
+                                <h4>새별마켓 유통 ERP</h4>
+                            </div>
+                            <p>마켓 유통 전용 ERP 솔루션 개발</p>
+                        </li>
+                        <li>
+                            <div class="data-title">
+                                <i class="iconset ico-service"></i>
+                                <h4>LG 스마트코티지</h4>
+                            </div>
+                            <p>LG 스마트코티지 사이트 관리페이지 고도화 작업</p>
+                        </li>
+                        <li>
+                            <div class="data-title">
+                                <i class="iconset ico-service"></i>
                                 <h4>국가물산업 IoT연동</h4>
                             </div>
                             <p>국가물산업 IoT장비 PC 연동 및 컨트롤 시스템 개발</p>
