--- a/index.html
+++ b/index.html
@@ -398,6 +398,12 @@
                     <ul class="content-list">
                         <li>
                             <i class="iconset ico-service01"></i>
+                            <h4>새별마켓 유통 ERP</h4>
+                            <p>마켓 유통 전용 ERP 솔루션 및 APP 관리 솔루션 개발 진행중입니다.</p>
+                            <!-- <a href="#" class="btn-go">바로가기</a> -->
+                        </li>
+                        <li>
+                            <i class="iconset ico-service01"></i>
                             <h4>소방장비 원격관제 솔루션</h4>
                             <p>소방장비 원격관제 관리 솔루션 및 APP 관리 솔루션 개발 진행중입니다.</p>
                             <!-- <a href="#" class="btn-go">바로가기</a> -->
@@ -406,12 +412,6 @@
                             <i class="iconset ico-service02"></i>
                             <h4>과학기술컨벤션센터</h4>
                             <p>과학기술컨벤션센터 대표 사이트 리뉴얼 작업 및 통합 예약 사이트의 고도화를 진행중입니다.</p>
-                            <!-- <a href="#" class="btn-go">바로가기</a> -->
-                        </li>
-                        <li>
-                            <i class="iconset ico-service03"></i>
-                            <h4>물산업 IoT연동 솔루션</h4>
-                            <p>국가물산업 IoT연동 솔루션 2차 개발을 진행중입니다.</p>
                             <!-- <a href="#" class="btn-go">바로가기</a> -->
                         </li>
                     </ul>
