--- a/index.html
+++ b/index.html
@@ -356,6 +356,12 @@
                     <div class="content-desc">OJSolution이 15년간 참여하여 성공적으로 마친 사업을 소개합니다.</div>
                     <ul class="content-list">
                         <li>
+                            <span>프로젝트 문의하기</span>
+                            <h4>Email : holykhd@naver.com</h4>
+                            <p>H.P : 010-9010-9642</p>
+                            <!-- <a href="#" class="btn-go">바로가기</a> -->
+                        </li>
+                        <li>
                             <span>국가물산업 IoT장비 PC 연동 및 컨트롤 시스템 개발</span>
                             <h4>국가물산업 IoT연동 솔루션</h4>
                             <p>국가물산업 IoT 장비와 PC를 연동한 실시간 점검 및 컨트롤이 가능한 솔루션 개발을 진행했습니다.</p>
