--- a/index.html
+++ b/index.html
@@ -255,6 +255,21 @@
             background: url(images/3d/icon-list06.png) center / contain no-repeat;
         }
 
+        #service-section01 > .content-list li:nth-child(7):before{
+            background: url(images/3d/icon-list07.png) center / contain no-repeat;
+        }
+
+        #service-section01 > .content-list li:nth-child(8):before{
+            background: url(images/3d/icon-list08.png) center / contain no-repeat;
+        }
+
+        #service-section01 > .content-list li:nth-child(9):before{
+            background: url(images/3d/icon-list09.png) center / contain no-repeat;
+        }
+        #service-section01 > .content-list li:nth-child(10):before{
+            background: url(images/3d/icon-list10.png) center / contain no-repeat;
+        }
+
         #service-section02 > .content-list li:before{
             background: url(images/ico-service09.png) center / contain no-repeat;
         }
