--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     <h4 class="content-title">PORTFOLIO</h4>
                     <div class="content-desc">OJSolution이 15년간 참여하여 성공적으로 마친 사업을 소개합니다.</div>
                     <ul class="content-list">
-                        <li>
+                        <li style="background: #fafafa">
                             <span>프로젝트 문의하기</span>
                             <h4>Email : holykhd@naver.com</h4>
                             <p>H.P : 010-9010-9642</p>
