--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <span>국가물산업 IoT장비 PC 연동 및 컨트롤 시스템 개발</span>
                             <h4>국가물산업 IoT연동 솔루션</h4>
                             <p>국가물산업 IoT 장비와 PC를 연동한 실시간 점검 및 컨트롤이 가능한 솔루션 개발을 진행했습니다.</p>
-                            <!-- <a href="#" class="btn-go">바로가기</a> -->
+                            <a href="#" class="btn-go">바로가기</a>
                         </li>
 -->                        
                         <li>
