--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
                     <ul class="content-list">
                         <li style="background: #fafafa">
                             <span>프로젝트 문의하기</span>
-                            <h4>Email : holykhd@naver.com</h4>
-                            <p>H.P : 010-9010-9642</p>
+                            <h4>H.P : 010-9010-9642</h4>
+                            <p>Email : holykhd@naver.com</p>
                             <!-- <a href="#" class="btn-go">바로가기</a> -->
                         </li>
 <!--
